--- a/index.html
+++ b/index.html
@@ -4,19 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <title>Mi portafolio</title>
 </head>
 <body>
     <header>
-        <div>Joseph</div>
+        <div class="title"><h1>Portfolio</h1></div>
+        <!-- svg hamb button -->
+        <svg class="menu-svg" viewBox="0 0 512 512">
+            <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
+        </svg>
         <nav>
-            <ul>
+            <ul class="nav-list">
                 <li><a href="#" class="nav-item">Proyectos</a></li>
                 <li><a href="#" class="nav-item">Información</a></li>
-                <li><a href="#" class="nav-item">CV</a></li>
+                <!-- <li><a href="#" class="nav-item">CV</a></li> -->
                 <li><a href="#" class="nav-item">Contacto</a></li>
             </ul>
         </nav>
     </header>
+    <main>
+        <div class="work-container">
+
+        </div>
+    </main>
 </body>
 </html>
