--- a/index.html
+++ b/index.html
@@ -8,27 +8,45 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
     <title>Mi portafolio</title>
 </head>
 <body>
     <header>
-        <div class="title"><h1>Portfolio</h1></div>       
+        <div class="title"><h1>Portfolio</h1></div>
         <nav>
-            <svg class="menu-svg" viewBox="0 0 448 512">
-                <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
-            </svg>
-            <ul class="nav-list">
+            <ul class="nav-container">
                 <li><a href="#" class="nav-item">Proyectos</a></li>
                 <li><a href="#" class="nav-item">Información</a></li>
                 <!-- <li><a href="#" class="nav-item">CV</a></li> -->
                 <li><a href="#" class="nav-item">Contacto</a></li>
             </ul>
-        </nav>
-    </header>
-    <main>
-        <div class="work-container">
 
+        </nav>
+        <svg class="menu-svg" viewBox="0 0 448 512">
+            <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
+        </svg>
+    </header>
+    <section>
+        <div class="info">Hello! I'm a web developer.</div>
+        <div class="work-group">
+            <div class="work-container">
+                <img src="/images/shots/#" alt="" class="work-shot">
+                <div class="work-desc">This is a small description</div>
+            </div>
+            <div class="work-container">
+                <img src="/images/shots/#" alt="" class="work-shot">
+                <div class="work-desc">This is a small description</div>
+            </div>
+            <div class="work-container">
+                <img src="/images/shots/#" alt="" class="work-shot">
+                <div class="work-desc">This is a small description</div>
+            </div>
+            <div class="work-container">
+                <img src="/images/shots/#" alt="" class="work-shot">
+                <div class="work-desc">This is a small description</div>
+            </div>
         </div>
-    </main>
+    </section>
 </body>
 </html>
