--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header>
-        <div class="title"><h1>Portfolio</h1></div>
+        <a  href="#" class="title">Portfolio</a>
         <nav>
             <ul class="nav-container">
                 <li><a href="#" class="nav-item">Proyectos</a></li>
@@ -27,26 +27,40 @@
             <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
         </svg>
     </header>
-    <section>
-        <div class="info">Hello! I'm a web developer.</div>
-        <div class="work-group">
-            <div class="work-container">
-                <img src="/images/shots/#" alt="" class="work-shot">
-                <div class="work-desc">This is a small description</div>
+    <main>
+        <div class="info-wrapper">Hello! I'm a front-end web developer focused on creating visually appealing and user-friendly websites.</div>
+        <section class="work-section">
+            <div class="section-name">Work</div>
+            <div class="work-group">
+                <div class="work-container">
+                    <img src="/images/shots/#" alt="" class="work-shot">
+                    <div class="work-name">Proyecto 1</div>
+                    <div class="work-description">This is a small description</div>
+                    <a href="#" class="work-link">Ver proyecto</a>
+                </div>
+                <div class="work-container">
+                    <img src="/images/shots/#" alt="" class="work-shot">
+                    <div class="work-name">Proyecto 2</div>
+                    <div class="work-description">This is a small description</div>
+                    <a href="#" class="work-link">Ver proyecto</a>
+                </div>
+                <div class="work-container">
+                    <img src="/images/shots/#" alt="" class="work-shot">
+                    <div class="work-name">Proyecto 3</div>
+                    <div class="work-description">This is a small description</div>
+                    <a href="#" class="work-link">Ver proyecto</a>
+                </div>
+                <div class="work-container">
+                    <img src="/images/shots/#" alt="" class="work-shot">
+                    <div class="work-name">Proyecto 4</div>
+                    <div class="work-description">This is a small description</div>
+                    <a href="#" class="work-link">Ver proyecto</a>
+                </div>
             </div>
-            <div class="work-container">
-                <img src="/images/shots/#" alt="" class="work-shot">
-                <div class="work-desc">This is a small description</div>
-            </div>
-            <div class="work-container">
-                <img src="/images/shots/#" alt="" class="work-shot">
-                <div class="work-desc">This is a small description</div>
-            </div>
-            <div class="work-container">
-                <img src="/images/shots/#" alt="" class="work-shot">
-                <div class="work-desc">This is a small description</div>
-            </div>
-        </div>
-    </section>
+        </section>
+        <section class="contact-section">
+            <div class="section-name">Contact me</div>
+        </section>
+    </main>
 </body>
 </html>
