Added mobile navbar + pdf download placeholder

--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             </svg>
             <ul class="nav-container">
                 <li><a href="#work" class="nav-item">Proyectos</a></li>
-                <li><a href="#" class="nav-item">Información</a></li>
+                <li><a href="#info" class="nav-item">Información</a></li>
                 <!-- <li><a href="#" class="nav-item">CV</a></li> -->
                 <li><a href="#contact" class="nav-item">Contacto</a></li>
             </ul>
         </nav>
-        <svg class="menu-svg" viewBox="0 0 448 512" onclick="index.js">
+        <svg class="menu-svg" viewBox="0 0 448 512">
             <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
         </svg>
     </header>
     <main>
-        <div class="info-wrapper">Hello! I'm a front-end web developer focused on creating visually appealing user-friendly websites.</div>
+        <div class="info-wrapper" id="info">Hello! I'm a front-end web developer focused on creating visually appealing user-friendly websites.</div>
         <section class="work-section">
             <div class="section-name">Work</div>
             <div class="work-group" id="work">
@@ -63,7 +63,9 @@
         <section class="contact-section" id="contact">
             <div class="section-name">Contact me</div>
             <a class="mail-button" href="mailto:placeholder@gmail.com">placeholder@gmail.com</a>
+            <a class="pdf-cv" href="#" target="_blank" rel="noopener noreferrer">placeholder-CV.pdf</a>
         </section>
     </main>
+    <script src="index.js"></script>
 </body>
 </html>
