Added 2 breakpoints (+680px & +920px)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,9 @@
         <section class="contact-section" id="contact">
             <div class="section-name">Contact me</div>
             <a class="mail-button" href="mailto:placeholder@gmail.com">placeholder@gmail.com</a>
-            <a class="pdf-cv" href="#" target="_blank" rel="noopener noreferrer">placeholder-CV.pdf</a>
+            <div class="resume">
+                <a class="resume-pdf" href="#" target="_blank" rel="noopener noreferrer">placeholder-CV.pdf</a>
+            </div>
         </section>
     </main>
     <script src="index.js"></script>
