Added a breakpoint (+1200px)

--- a/index.html
+++ b/index.html
@@ -30,32 +30,32 @@
         </svg>
     </header>
     <main>
-        <div class="info-wrapper" id="info">Hello! I'm a front-end web developer focused on creating visually appealing user-friendly websites.</div>
+        <p class="info-wrapper" id="info">Hello! I'm a front-end web developer focused on creating visually appealing user-friendly websites.</p>
         <section class="work-section">
-            <div class="section-name">Work</div>
+            <div class="section-name">My Work</div>
             <div class="work-group" id="work">
                 <div class="work-container">
                     <img src="/images/shots/#" alt="" class="work-shot">
                     <div class="work-name">Proyecto 1</div>
-                    <div class="work-description">This is a small description</div>
+                    <p class="work-description">This is a small description</p>
                     <a href="#" class="work-link">Ver proyecto</a>
                 </div>
                 <div class="work-container">
                     <img src="/images/shots/#" alt="" class="work-shot">
                     <div class="work-name">Proyecto 2</div>
-                    <div class="work-description">This is a small description</div>
+                    <p class="work-description">This is a small description</p>
                     <a href="#" class="work-link">Ver proyecto</a>
                 </div>
                 <div class="work-container">
                     <img src="/images/shots/#" alt="" class="work-shot">
                     <div class="work-name">Proyecto 3</div>
-                    <div class="work-description">This is a small description</div>
+                    <p class="work-description">This is a small description</p>
                     <a href="#" class="work-link">Ver proyecto</a>
                 </div>
                 <div class="work-container">
                     <img src="/images/shots/#" alt="" class="work-shot">
                     <div class="work-name">Proyecto 4</div>
-                    <div class="work-description">This is a small description</div>
+                    <p class="work-description">This is a small description</p>
                     <a href="#" class="work-link">Ver proyecto</a>
                 </div>
             </div>
