--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,12 +12,14 @@
     <link rel="shortcut icon" href="/images/favicon/favicon.ico" type="image/x-icon">
     <title>Mi portafolio</title>
 </head>
+
 <body>
     <header>
         <a href="#" class="title">Portfolio</a>
         <nav>
             <svg class="close-svg" viewBox="0 0 512 512">
-                <path d="M175 175C184.4 165.7 199.6 165.7 208.1 175L255.1 222.1L303 175C312.4 165.7 327.6 165.7 336.1 175C346.3 184.4 346.3 199.6 336.1 208.1L289.9 255.1L336.1 303C346.3 312.4 346.3 327.6 336.1 336.1C327.6 346.3 312.4 346.3 303 336.1L255.1 289.9L208.1 336.1C199.6 346.3 184.4 346.3 175 336.1C165.7 327.6 165.7 312.4 175 303L222.1 255.1L175 208.1C165.7 199.6 165.7 184.4 175 175V175zM512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM256 48C141.1 48 48 141.1 48 256C48 370.9 141.1 464 256 464C370.9 464 464 370.9 464 256C464 141.1 370.9 48 256 48z"/>
+                <path
+                    d="M175 175C184.4 165.7 199.6 165.7 208.1 175L255.1 222.1L303 175C312.4 165.7 327.6 165.7 336.1 175C346.3 184.4 346.3 199.6 336.1 208.1L289.9 255.1L336.1 303C346.3 312.4 346.3 327.6 336.1 336.1C327.6 346.3 312.4 346.3 303 336.1L255.1 289.9L208.1 336.1C199.6 346.3 184.4 346.3 175 336.1C165.7 327.6 165.7 312.4 175 303L222.1 255.1L175 208.1C165.7 199.6 165.7 184.4 175 175V175zM512 256C512 397.4 397.4 512 256 512C114.6 512 0 397.4 0 256C0 114.6 114.6 0 256 0C397.4 0 512 114.6 512 256zM256 48C141.1 48 48 141.1 48 256C48 370.9 141.1 464 256 464C370.9 464 464 370.9 464 256C464 141.1 370.9 48 256 48z" />
             </svg>
             <ul class="nav-container">
                 <li><a href="#work" class="nav-item">Proyectos</a></li>
@@ -26,48 +29,56 @@
             </ul>
         </nav>
         <svg class="menu-svg" viewBox="0 0 448 512">
-            <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
+            <path
+                d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z" />
         </svg>
     </header>
     <main>
-        <p class="info-wrapper" id="info">Hello! I'm a front-end web developer focused on creating visually appealing user-friendly websites.</p>
+        <p class="info-wrapper" id="info">Hello! I'm a front-end web developer focused on creating visually appealing
+            user-friendly websites.</p>
         <section class="work-section">
             <div class="section-name">My Work</div>
             <div class="work-group" id="work">
                 <div class="work-container">
-                    <img src="/images/shots/#" alt="" class="work-shot">
-                    <div class="work-name">Proyecto 1</div>
-                    <p class="work-description">This is a small description</p>
-                    <a href="#" class="work-link">Ver proyecto</a>
+                    <img src="/images/shots/huddle-landing-page-with-single-introductory-section-FHD.png"
+                        alt="Huddle landing page with single introductory section shot" class="work-shot">
+                    <div class="work-name">Huddle landing page with single introductory section</div>
+                    <p class="work-description">Creado con Sass y BEM.</p>
+                    <a href="https://josr13.github.io/huddle-landing-page-with-single-introductory-section/"
+                        target="_blank" class="work-link">Ver proyecto</a>
                 </div>
                 <div class="work-container">
-                    <img src="/images/shots/#" alt="" class="work-shot">
-                    <div class="work-name">Proyecto 2</div>
-                    <p class="work-description">This is a small description</p>
-                    <a href="#" class="work-link">Ver proyecto</a>
+                    <img src="/images/shots/advice-generator-app-FHD.png" alt="Advice generator app shot"
+                        class="work-shot">
+                    <div class="work-name">Advice generator app</div>
+                    <p class="work-description">Creado con JavaScript, API, Sass y BEM.</p>
+                    <a href="https://josr13.github.io/advice-generator-app/" target="_blank" class="work-link">Ver
+                        proyecto</a>
                 </div>
                 <div class="work-container">
-                    <img src="/images/shots/#" alt="" class="work-shot">
-                    <div class="work-name">Proyecto 3</div>
-                    <p class="work-description">This is a small description</p>
-                    <a href="#" class="work-link">Ver proyecto</a>
+                    <img src="/images/shots/faq-accordion-card-FHD.png" alt="FAQ accordion card shot" class="work-shot">
+                    <div class="work-name">FAQ accordion card</div>
+                    <p class="work-description">Creado con JavaScript, Sass y BEM.</p>
+                    <a href="https://josr13.github.io/faq-accordion-card/" target="_blank" class="work-link">Ver
+                        proyecto</a>
                 </div>
                 <div class="work-container">
                     <img src="/images/shots/#" alt="" class="work-shot">
                     <div class="work-name">Proyecto 4</div>
                     <p class="work-description">This is a small description</p>
-                    <a href="#" class="work-link">Ver proyecto</a>
+                    <a href="" target="_blank" class="work-link">Ver proyecto</a>
                 </div>
             </div>
         </section>
         <section class="contact-section" id="contact">
             <div class="section-name">Contact me</div>
-            <a class="mail-button" href="mailto:placeholder@gmail.com">placeholder@gmail.com</a>
+            <a class="mail-button" href="mailto:josr13000@gmail.com">josr13000@gmail.com</a>
             <div class="resume">
-                <a class="resume-pdf" href="#" target="_blank" rel="noopener noreferrer">placeholder-CV.pdf</a>
+                <a class="resume-pdf" href="#" target="_blank" rel="noopener noreferrer">CV-josephr.pdf</a>
             </div>
         </section>
     </main>
     <script src="index.js"></script>
 </body>
+
 </html>
