--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <a href="#" class="title">Portfolio</a>
+        <a href="#" class="title">Mi portafolio</a>
         <nav>
             <svg class="close-svg" viewBox="0 0 512 512">
                 <path
@@ -34,10 +34,13 @@
         </svg>
     </header>
     <main>
-        <p class="info-wrapper" id="info">Hello! I'm a front-end web developer focused on creating visually appealing
-            user-friendly websites.</p>
+        <!-- <p class="info-wrapper" id="info"> I'm a front-end web developer focused on creating visually appealing
+            user-friendly websites.</p> -->
+        <p class="info-wrapper" id="info">¡Hola! Soy Joseph, un desarrollador web front-end con conocimientos en
+            JavaScript, CSS3, HTML5 y Sass (SCSS). Teniendo siempre un enfoque en responsive design, desarrollo
+            mobile-first y metodología BEM (Block Element Modifier).</p>
         <section class="work-section">
-            <div class="section-name">My Work</div>
+            <div class="section-name">Proyectos</div>
             <div class="work-group" id="work">
                 <div class="work-container">
                     <img src="/images/shots/huddle-landing-page-with-single-introductory-section-FHD.png"
@@ -71,7 +74,7 @@
             </div>
         </section>
         <section class="contact-section" id="contact">
-            <div class="section-name">Contact me</div>
+            <div class="section-name">Contáctame</div>
             <a class="mail-button" href="mailto:josr13000@gmail.com">josr13000@gmail.com</a>
             <div class="resume">
                 <a class="resume-pdf" href="#" target="_blank" rel="noopener noreferrer">CV-josephr.pdf</a>
