--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
     <main>
         <!-- <p class="info-wrapper" id="info"> I'm a front-end web developer focused on creating visually appealing
             user-friendly websites.</p> -->
-        <p class="info-wrapper" id="info">¡Hola! Soy Joseph, un desarrollador web front-end con conocimientos en
-            JavaScript, CSS3, HTML5 y Sass (SCSS). Teniendo siempre un enfoque en responsive design, desarrollo
-            mobile-first y metodología BEM (Block Element Modifier).</p>
+        <p class="info-wrapper" id="info">¡Hola! Soy Joseph, un desarrollador web front-end con experiencia en
+            JavaScript, Sass, CSS y HTML, enfocado en responsive design y metodologías mobile-first y BEM.</p>
         <section class="work-section">
             <div class="section-name">Proyectos</div>
             <div class="work-group" id="work">
