--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="work-container">
                     <img src="/images/shots/huddle-landing-page-with-single-introductory-section-FHD.png"
                         alt="Huddle landing page with single introductory section shot" class="work-shot">
-                    <div class="work-name">Huddle landing page with single introductory section</div>
+                    <div class="work-name">Huddle landing page (w/ single intro section)</div>
                     <p class="work-description">Creado con Sass y BEM.</p>
                     <a href="https://josr13.github.io/huddle-landing-page-with-single-introductory-section/"
                         target="_blank" class="work-link">Ver proyecto</a>
@@ -64,12 +64,12 @@
                     <a href="https://josr13.github.io/faq-accordion-card/" target="_blank" class="work-link">Ver
                         proyecto</a>
                 </div>
-                <div class="work-container">
+                <!-- <div class="work-container">
                     <img src="/images/shots/#" alt="" class="work-shot">
                     <div class="work-name">Proyecto 4</div>
                     <p class="work-description">This is a small description</p>
                     <a href="" target="_blank" class="work-link">Ver proyecto</a>
-                </div>
+                </div> -->
             </div>
         </section>
         <section class="contact-section" id="contact">
