Add github link + states

--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
         <section class="contact-section" id="contact">
             <div class="section-name">Contáctame</div>
             <a class="mail-button" href="mailto:josr13000@gmail.com">josr13000@gmail.com</a>
+            <div class="github">Otros proyectos:
+                <a href="https://github.com/josr13?tab=repositories" target="_blank" class="github-link">GitHub
+                    (josr13)</a>
+            </div>
             <div class="resume">
                 <a class="resume-pdf" href="#" target="_blank" rel="noopener noreferrer">CV-josephr.pdf</a>
             </div>
