Add new work + styles

--- a/index.html
+++ b/index.html
@@ -34,42 +34,46 @@
         </svg>
     </header>
     <main>
-        <!-- <p class="info-wrapper" id="info"> I'm a front-end web developer focused on creating visually appealing
-            user-friendly websites.</p> -->
-        <p class="info-wrapper" id="info">¡Hola! Soy Joseph, un desarrollador web front-end con experiencia en
-            JavaScript, Sass, CSS y HTML, enfocado en responsive design y metodologías mobile-first y BEM.</p>
+        <p class="info-wrapper" id="info">👋 ¡Hola! Soy Joseph, un desarrollador web con experiencia en ReactJS,
+            JavaScript, Sass, CSS y HTML, enfocado en responsive design y mobile-first para una buena experiencia del
+            usuario.</p>
         <section class="work-section">
             <div class="section-name">Proyectos</div>
+            <p class="work-body">👉 Click en algunas imágenes para expandir.</p>
             <div class="work-group" id="work">
+                <div class="work-container">
+                    <div class="long-img">
+                        <img src="/images/shots/fylo-dark-theme-landing-page-FHD.png"
+                            alt="Fylo landing page with dark theme and features grid shot" class="work-shot">
+                    </div>
+                    <div class="work-name">🔹 Fylo dark them landing page</div>
+                    <p class="work-description">▶ Creado con ReactJS, ReactHooks y Vite.</p>
+                    <a href="https://fylo-dark-theme-landing-page-josr13.vercel.app/" target="_blank"
+                        class="work-link">Ver proyecto</a>
+                </div>
                 <div class="work-container">
                     <img src="/images/shots/huddle-landing-page-with-single-introductory-section-FHD.png"
                         alt="Huddle landing page with single introductory section shot" class="work-shot">
-                    <div class="work-name">Huddle landing page (intro section)</div>
-                    <p class="work-description">Creado con Sass y BEM.</p>
+                    <div class="work-name">🔹 Huddle landing page (intro section)</div>
+                    <p class="work-description">▶ Creado con Sass y BEM.</p>
                     <a href="https://josr13.github.io/huddle-landing-page-with-single-introductory-section/"
                         target="_blank" class="work-link">Ver proyecto</a>
                 </div>
                 <div class="work-container">
                     <img src="/images/shots/advice-generator-app-FHD.png" alt="Advice generator app shot"
                         class="work-shot">
-                    <div class="work-name">Advice generator app</div>
-                    <p class="work-description">Creado con JavaScript, API, Sass y BEM.</p>
+                    <div class="work-name">🔹 Advice generator app</div>
+                    <p class="work-description">▶ Creado con JavaScript, API, Sass y BEM.</p>
                     <a href="https://josr13.github.io/advice-generator-app/" target="_blank" class="work-link">Ver
                         proyecto</a>
                 </div>
                 <div class="work-container">
                     <img src="/images/shots/faq-accordion-card-FHD.png" alt="FAQ accordion card shot" class="work-shot">
-                    <div class="work-name">FAQ accordion card</div>
-                    <p class="work-description">Creado con JavaScript, Sass y BEM.</p>
+                    <div class="work-name">🔹 FAQ accordion card</div>
+                    <p class="work-description">▶ Creado con JavaScript, Sass y BEM.</p>
                     <a href="https://josr13.github.io/faq-accordion-card/" target="_blank" class="work-link">Ver
                         proyecto</a>
                 </div>
-                <!-- <div class="work-container">
-                    <img src="/images/shots/#" alt="" class="work-shot">
-                    <div class="work-name">Proyecto 4</div>
-                    <p class="work-description">This is a small description</p>
-                    <a href="" target="_blank" class="work-link">Ver proyecto</a>
-                </div> -->
             </div>
         </section>
         <section class="contact-section" id="contact">
@@ -79,9 +83,9 @@
                 <a href="https://github.com/josr13?tab=repositories" target="_blank" class="github-link">GitHub
                     (josr13)</a>
             </div>
-            <div class="resume">
+            <!-- <div class="resume">
                 <a class="resume-pdf" href="#" target="_blank" rel="noopener noreferrer">CV-josephr.pdf</a>
-            </div>
+            </div> -->
         </section>
     </main>
     <script src="index.js"></script>
