--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         </svg>
     </header>
     <main>
-        <p class="info-wrapper" id="info">👋 ¡Hola! Soy Joseph, un desarrollador web con experiencia en ReactJS,
-            JavaScript, Sass, CSS y HTML, enfocado en responsive design y mobile-first para una buena experiencia del
-            usuario.</p>
+        <p class="info-wrapper" id="info">👋 ¡Hola! Soy Joseph, un Desarrollador Full-Stack con experiencia en Node.js,
+            ReactJS, .NET, JavaScript, bases de datos SQL, APIs RESTful, Python, Java, COBOL, CSS3 y HTML5.</p>
         <section class="work-section">
             <div class="section-name">Proyectos</div>
             <p class="work-body">👉 Click en algunas imágenes para expandir.</p>
